--- a/playlist2.html
+++ b/playlist2.html
@@ -110,7 +110,7 @@
 <body>
 
   <div class="container">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/2/26/Spotify_logo_with_text.svg" width="120" alt="Spotify Logo">
+    <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.pngegg.com%2Fid%2Fpng-mlhro&psig=AOvVaw1L2wrbCd8ROTtMV6pOmEvq&ust=1756471269129000&source=images&cd=vfe&opi=89978449&ved=0CBUQjRxqFwoTCLD_9dDDrY8DFQAAAAAdAAAAABAS" width="120" alt="Logo">
 
     <h1> Playlist Galau</h1>
 
@@ -196,3 +196,4 @@
 
 </body>
 </html>
+
