--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
   <!-- Sidebar -->
   <div class="sidebar">
-    <img src="logo music.png" alt="Logo" />
+    <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.pngegg.com%2Fid%2Fpng-mlhro&psig=AOvVaw1L2wrbCd8ROTtMV6pOmEvq&ust=1756471269129000&source=images&cd=vfe&opi=89978449&ved=0CBUQjRxqFwoTCLD_9dDDrY8DFQAAAAAdAAAAABAS" alt="Logo" />
 
     <!-- Input pencarian -->
     <input type="text" id="searchInput" placeholder="🔍 Cari lagu..." />
@@ -185,5 +185,6 @@
 
 </body>
 </html>
+
 
 
