--- a/playlist2.html
+++ b/playlist2.html
@@ -110,7 +110,7 @@
 <body>
 
   <div class="container">
-    <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.pngegg.com%2Fid%2Fpng-mlhro&psig=AOvVaw1L2wrbCd8ROTtMV6pOmEvq&ust=1756471269129000&source=images&cd=vfe&opi=89978449&ved=0CBUQjRxqFwoTCLD_9dDDrY8DFQAAAAAdAAAAABAS" width="120" alt="Logo">
+    <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fid.pngtree.com%2Ffree-png-vectors%2Fmusik-hijau&psig=AOvVaw0lmU3TmbIRpGUb-nVVxOEs&ust=1756472370725000&source=images&cd=vfe&opi=89978449&ved=0CBUQjRxqFwoTCLCF08_HrY8DFQAAAAAdAAAAABAE" width="120" alt="Logo">
 
     <h1> Playlist Galau</h1>
 
@@ -196,4 +196,5 @@
 
 </body>
 </html>
+
 
