--- a/index.html
+++ b/index.html
@@ -106,7 +106,11 @@
 
   <!-- Sidebar -->
   <div class="sidebar">
-    <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.pngegg.com%2Fid%2Fpng-mlhro&psig=AOvVaw1L2wrbCd8ROTtMV6pOmEvq&ust=1756471269129000&source=images&cd=vfe&opi=89978449&ved=0CBUQjRxqFwoTCLD_9dDDrY8DFQAAAAAdAAAAABAS" alt="Logo" />
+    <div style="width: 120px; margin-bottom: 20px;">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="#1db954" width="100%" height="100%">
+      <path d="M9 17.5C9 18.88 7.88 20 6.5 20S4 18.88 4 17.5 5.12 15 6.5 15 9 16.12 9 17.5zM9 5v10.1c-.58-.38-1.26-.6-2-.6-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4V9l10-2v6.1c-.58-.38-1.26-.6-2-.6-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4V3L9 5z"/>
+    </svg>
+  </div>
 
     <!-- Input pencarian -->
     <input type="text" id="searchInput" placeholder="🔍 Cari lagu..." />
@@ -185,6 +189,7 @@
 
 </body>
 </html>
+
 
 
 
