--- a/playlist2.html
+++ b/playlist2.html
@@ -110,8 +110,11 @@
 <body>
 
   <div class="container">
-    <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fid.pngtree.com%2Ffree-png-vectors%2Fmusik-hijau&psig=AOvVaw0lmU3TmbIRpGUb-nVVxOEs&ust=1756472370725000&source=images&cd=vfe&opi=89978449&ved=0CBUQjRxqFwoTCLCF08_HrY8DFQAAAAAdAAAAABAE" width="120" alt="Logo">
-
+   <div style="width: 120px; margin-bottom: 20px;">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="#1db954" width="100%" height="100%">
+      <path d="M9 17.5C9 18.88 7.88 20 6.5 20S4 18.88 4 17.5 5.12 15 6.5 15 9 16.12 9 17.5zM9 5v10.1c-.58-.38-1.26-.6-2-.6-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4V9l10-2v6.1c-.58-.38-1.26-.6-2-.6-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4V3L9 5z"/>
+    </svg>
+  </div>
     <h1> Playlist Galau</h1>
 
     <!-- Lagu 1 -->
@@ -196,5 +199,6 @@
 
 </body>
 </html>
+
 
 
