--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
   <!-- Main Content -->
   <div class="main">
     <h1>Selamat Datang Di Web Muhammad Faiq 👋</h1>
-    <p class="desc">Nikmati berbagai playlist estetik favoritmu dalam suasana gelap ala Spotify.</p>
+    <p class="desc">Nikmati lagu nya dalam suasana gelap, betewe masi sikit guys updateannya.</p>
 
     <!-- Playlist utama (rekomendasi, tampil kalau input kosong) -->
     <div class="playlist-list" id="playlistList">
@@ -189,6 +189,7 @@
 
 </body>
 </html>
+
 
 
 
