--- a/playlist1.html
+++ b/playlist1.html
@@ -110,11 +110,8 @@
 <body>
 
   <div class="container">
-     <div style="width: 120px; margin-bottom: 20px;">
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="#1db954" width="100%" height="100%">
-      <path d="M9 17.5C9 18.88 7.88 20 6.5 20S4 18.88 4 17.5 5.12 15 6.5 15 9 16.12 9 17.5zM9 5v10.1c-.58-.38-1.26-.6-2-.6-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4V9l10-2v6.1c-.58-.38-1.26-.6-2-.6-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4V3L9 5z"/>
-    </svg>
-  </div>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/2/26/Spotify_logo_with_text.svg" width="120" alt="Spotify Logo">
+
     <h1> Playlist Cinta</h1>
 
     <!-- Lagu 1 -->
@@ -176,6 +173,66 @@
         </audio>
       </div>
     </div>
+
+     <!-- Lagu 6 -->
+    <div class="song" id="surat cinta untuk starla">
+      <img src="surat cinta untuk starla.jpg" alt="Cover" class="cover" alt="surat cinta untuk starla" />
+      <div class="info">
+        <h3>Surat Cinta Untuk Starla</h3>
+        <p>Virgoun</p>
+        <audio controls>
+          <source src="Virgoun - Surat Cinta Untuk Starla (Lirik Lagu) [4ZLBcD5MD9c].mp3" type="audio/mpeg">
+        </audio>
+      </div>
+    </div>
+
+     <!-- Lagu 7 -->
+    <div class="song" id="bergema sampai selamanya">
+      <img src="bergema sampai selamanya.jpg" alt="Cover" class="cover" alt="bergema sampai selamanya" />
+      <div class="info">
+        <h3>Bergema Sampai Selamanya</h3>
+        <p>Nadhif Basalamah</p>
+        <audio controls>
+          <source src="Bergema Sampai Selamanya - Nadhif Basalamah _ Lirik Lagu [rlz0ITBc_18].mp3" type="audio/mpeg">
+        </audio>
+      </div>
+    </div>
+
+    <!-- Lagu 8 -->
+    <div class="song" id="perempuanku">
+      <img src="perempuanku.jpg" alt="Cover" class="cover" alt="perempuanku" />
+      <div class="info">
+        <h3>Perempuanku</h3>
+        <p>Irwansyah</p>
+        <audio controls>
+          <source src="Perempuanku - Irwansyah ( Lirik Lagu) [lpz2dxqolhE].mp3" type="audio/mpeg">
+        </audio>
+      </div>
+    </div>
+
+    <!-- Lagu 9 -->
+    <div class="song" id="bunga abadi">
+      <img src="bunga abadi.jpg" alt="Cover" class="cover" alt="bunga abadi" />
+      <div class="info">
+        <h3>Bunga Abadi</h3>
+        <p>Rio Clappy</p>
+        <audio controls>
+          <source src="Bunga Abadi-Rio Clappy__ Lirik Lagu (Oh apalah arti dari semua…tanpa kehadiran nya disini) [R_LrnmJQ0hg].mp3" type="audio/mpeg">
+        </audio>
+      </div>
+    </div> 
+
+    <!-- Lagu 10 -->
+    <div class="song" id="jaga selalu hatimu">
+      <img src="jaga selalu hatimu.jpeg" alt="Cover" class="cover" alt="jaga selalu hatimu" />
+      <div class="info">
+        <h3>Jaga Selalu Hatimu</h3>
+        <p>Seventeen</p>
+        <audio controls>
+          <source src="Jaga Selalu Hatimu - Seventeen _ Lirik Lagu [t5QWWE3IgHY].mp3" type="audio/mpeg">
+        </audio>
+      </div>
+    </div>
 <div style="margin-bottom: 20px;">
   <a href="index.html" style="
     color: #1db954;
@@ -199,5 +256,3 @@
 
 </body>
 </html>
-
-
