--- a/index.html
+++ b/index.html
@@ -106,12 +106,11 @@
 
   <!-- Sidebar -->
   <div class="sidebar">
-    <div style="width: 120px; margin-bottom: 20px;">
+     <div style="width: 120px; margin-bottom: 20px;">
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="#1db954" width="100%" height="100%">
       <path d="M9 17.5C9 18.88 7.88 20 6.5 20S4 18.88 4 17.5 5.12 15 6.5 15 9 16.12 9 17.5zM9 5v10.1c-.58-.38-1.26-.6-2-.6-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4V9l10-2v6.1c-.58-.38-1.26-.6-2-.6-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4V3L9 5z"/>
     </svg>
   </div>
-
     <!-- Input pencarian -->
     <input type="text" id="searchInput" placeholder="🔍 Cari lagu..." />
 
@@ -126,11 +125,11 @@
   <!-- Main Content -->
   <div class="main">
     <h1>Selamat Datang Di Web Muhammad Faiq 👋</h1>
-    <p class="desc">Nikmati lagu nya dalam suasana gelap, betewe masi sikit guys updateannya.</p>
+    <p class="desc">Nikmati berbagai playlist estetik favoritmu dalam suasana gelap ala Spotify.</p>
 
     <!-- Playlist utama (rekomendasi, tampil kalau input kosong) -->
     <div class="playlist-list" id="playlistList">
-      <a href="playlist1.html">🎵 Playlist 1 - Lagu Cinta: Dan, Penjaga Hati, Lesung pipi, monolog, Abadi</a>
+      <a href="playlist1.html">🎵 Playlist 1 - Lagu Cinta: Dan, Penjaga Hati, Lesung pipi, monolog, Abadi, surat cinta untuk starla, bergema sampai selamanya, perempuanku, bunga abadi, jaga selalu hatimu</a>
       <a href="playlist2.html">🎶 Playlist 2 - Lagu Galau: Tampar, Masing Masing, Satu Bulan, Mengenangmu, Tanpa Pesan Terakhir</a>
     </div>
   </div>
@@ -146,6 +145,11 @@
       { title: "Penjaga Hati", url: "playlist1.html#penjaga-hati" },
       { title: "Monolog", url: "playlist1.html#monolog" },
       { title: "Lesung Pipi", url: "playlist1.html#lesung-pipi" },
+      { title: "surat cinta untuk starla", url: "playlist1.html#surat-cinta-untuk-starla" },
+      { title: "bergema sampai selamanya", url: "playlist1.html#bergema-sampai-selamanya" },
+      { title: "perempuanku", url: "playlist1.html#perempuanku" },
+      { title: "bunga abadi", url: "playlist1.html#bunga abadi" },
+      { title: "jaga selalu hatimu", url: "playlist1.html#jaga-selalu-hatimu" },
       { title: "Masing Masing", url: "playlist2.html#masing-masing" },
       { title: "Satu BUlan", url: "playlist2.html#satu-bulan" },
       { title: "Tampar", url: "playlist2.html#tampar" },
@@ -189,8 +193,3 @@
 
 </body>
 </html>
-
-
-
-
-
