--- a/playlist2.html
+++ b/playlist2.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>🎧 Playlist Estetik Gelap</title>
+  <title>🎧 Playlist Galau</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
   <style>
     :root {
       --primary-bg: #121212;
       --secondary-bg: #1e1e1e;
-      --accent: #1db954; /* Spotify Green */
+      --accent: #1db954;
       --text-color: #ffffff;
       --subtext: #aaaaaa;
     }
@@ -90,6 +90,28 @@
       filter: drop-shadow(0 0 5px var(--accent));
     }
 
+    .back-button {
+      text-align: center;
+      margin-top: 30px;
+    }
+
+    .back-button a {
+      color: var(--accent);
+      text-decoration: none;
+      font-weight: bold;
+      font-size: 1rem;
+      padding: 10px 20px;
+      background-color: #2a2a2a;
+      border-radius: 8px;
+      display: inline-block;
+      transition: background 0.3s, color 0.3s;
+    }
+
+    .back-button a:hover {
+      background-color: var(--accent);
+      color: #121212;
+    }
+
     @media (max-width: 600px) {
       .song {
         flex-direction: column;
@@ -104,22 +126,32 @@
       .info {
         padding: 15px;
       }
+
+      .info h3 {
+        font-size: 1em;
+      }
+
+      .info p {
+        font-size: 0.85em;
+      }
+
+      .back-button a {
+        width: 100%;
+        text-align: center;
+      }
     }
   </style>
 </head>
 <body>
 
   <div class="container">
-   <div style="width: 120px; margin-bottom: 20px;">
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="#1db954" width="100%" height="100%">
-      <path d="M9 17.5C9 18.88 7.88 20 6.5 20S4 18.88 4 17.5 5.12 15 6.5 15 9 16.12 9 17.5zM9 5v10.1c-.58-.38-1.26-.6-2-.6-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4V9l10-2v6.1c-.58-.38-1.26-.6-2-.6-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4V3L9 5z"/>
-    </svg>
-  </div>
-    <h1> Playlist Galau</h1>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/2/26/Spotify_logo_with_text.svg" width="120" alt="Spotify Logo" style="display: block; margin: 0 auto 30px;" />
+
+    <h1>Playlist Galau</h1>
 
     <!-- Lagu 1 -->
-    <div class="song" id="masing masing">
-      <img src="masing masing.jpg" alt="Cover" class="cover" alt="masing masing" />
+    <div class="song" id="masing-masing">
+      <img src="masing masing.jpg" alt="Masing-Masing" class="cover" />
       <div class="info">
         <h3>Masing Masing</h3>
         <p>Ade Govinda & Ernie Zakri</p>
@@ -130,8 +162,8 @@
     </div>
 
     <!-- Lagu 2 -->
-    <div class="song" id="satu bulan">
-      <img src="satu bulan.jpg" alt="Cover" class="cover" alt="satu bulan" />
+    <div class="song" id="satu-bulan">
+      <img src="satu bulan.jpg" alt="Satu Bulan" class="cover" />
       <div class="info">
         <h3>Satu Bulan</h3>
         <p>Bernadya</p>
@@ -143,10 +175,10 @@
 
     <!-- Lagu 3 -->
     <div class="song" id="mengenangmu">
-      <img src="mgenangmu.jpg" alt="Cover" class="cover" alt="mengenangmu" />
+      <img src="mengenangmu.jpg" alt="Mengenangmu" class="cover" />
       <div class="info">
         <h3>Mengenangmu</h3>
-        <p>Keris Patih</p>
+        <p>Kerispatih</p>
         <audio controls>
           <source src="Kerispatih - Mengenangmu _ Lirik Lagu [FPcUx7Bassk].mp3" type="audio/mpeg">
         </audio>
@@ -155,7 +187,7 @@
 
     <!-- Lagu 4 -->
     <div class="song" id="tampar">
-      <img src="tampar.jpg" alt="Cover" class="cover" alt="tampar" />
+      <img src="tampar.jpg" alt="Tampar" class="cover" />
       <div class="info">
         <h3>Tampar</h3>
         <p>Juicy Luicy</p>
@@ -166,8 +198,8 @@
     </div>
 
     <!-- Lagu 5 -->
-    <div class="song" id="tanpa pesan terakhir">
-      <img src="tanpa pesan terakhir.jpg" alt="Cover" class="cover" alt="tanpa pesan terakhir" />
+    <div class="song" id="tanpa-pesan-terakhir">
+      <img src="tanpa pesan terakhir.jpg" alt="Tanpa Pesan Terakhir" class="cover" />
       <div class="info">
         <h3>Tanpa Pesan Terakhir</h3>
         <p>Seventeen</p>
@@ -176,29 +208,12 @@
         </audio>
       </div>
     </div>
-<div style="margin-bottom: 20px;">
-  <a href="index.html" style="
-    color: #1db954;
-    text-decoration: none;
-    font-weight: bold;
-    font-size: 1rem;
-    padding: 8px 15px;
-    background-color: #2a2a2a;
-    border-radius: 8px;
-    display: inline-block;
-    transition: background 0.3s;
-  " onmouseover="this.style.background='#1db954'; this.style.color='#121212';"
-     onmouseout="this.style.background='#2a2a2a'; this.style.color='#1db954';">
-    🔙 Kembali ke Home
-  </a>
-</div>
 
-    <!-- Tambahkan lagu tambahan di sini -->
-
+    <!-- Tombol Kembali -->
+    <div class="back-button">
+      <a href="index.html">🔙 Kembali ke Home</a>
+    </div>
   </div>
 
 </body>
 </html>
-
-
-
