--- a/playlist1.html
+++ b/playlist1.html
@@ -153,7 +153,10 @@
 <body>
 
   <div class="container">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/2/26/Spotify_logo_with_text.svg" width="120" alt="Spotify Logo" style="display: block; margin: 0 auto 30px;" />
+    <div style="width: 120px; margin-bottom: 20px;">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="#1db954" width="100%" height="100%">
+          <path d="M9 17.5C9 18.88 7.88 20 6.5 20S4 18.88 4 17.5 5.12 15 6.5 15 9 16.12 9 17.5zM9 5v10.1c-.58-.38-1.26-.6-2-.6-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4V9l10-2v6.1c-.58-.38-1.26-.6-2-.6-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4V3L9 5z"/>
+        </svg>
 
     <h1>Playlist Cinta</h1>
 
@@ -276,3 +279,4 @@
 
 </body>
 </html>
+
